--- a/index.html
+++ b/index.html
@@ -12,9 +12,12 @@
 	<body>
 
 		<!lib scripts>
-		<script type="text/javascript" src="lib/d3/topojson.min.js"></script>
-		<script type="text/javascript" src="lib/d3.js"></script>
-		<script type="text/javascript" src="lib/d3-queue.v2.min.js"></script>
+
+<!--		<script type="text/javascript" src="lib/d3.js"></script>-->
+		<script src="https://d3js.org/d3.v7.min.js"></script>
+		<script src="https://unpkg.com/topojson@3.0.2/dist/topojson.js"></script>
+<!--		<script type="text/javascript" src="lib/new_topojson.min.js"></script>-->
+<!--		<script type="text/javascript" src="lib/d3-queue.v2.min.js"></script>-->
 
 
 		<!main.js>
